created profile for Trainer and Trainee